<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adictosalainformatica.androkeepass.utils.password.GeneratePasswordActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/include"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_height="0dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_width="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <CheckBox
        android:id="@+id/generate_password_check_box_upper_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="63dp"
        android:text="@string/generatepassword_upper"
        app:layout_constraintBottom_toBottomOf="@+id/generate_password_check_box_numbers"
        app:layout_constraintLeft_toRightOf="@+id/generate_password_check_box_numbers"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/generate_password_check_box_numbers"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/generate_password_check_box_lower_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generatepassword_lower"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/generate_password_check_box_numbers"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="44dp" />

    <CheckBox
        android:id="@+id/generate_password_check_box_punctuation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/generatepassword_punctuation"
        app:layout_constraintLeft_toLeftOf="@+id/generate_password_check_box_upper_case"
        app:layout_constraintRight_toRightOf="@+id/generate_password_check_box_upper_case"
        app:layout_constraintTop_toBottomOf="@+id/generate_password_check_box_upper_case"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <CheckBox
        android:id="@+id/generate_password_check_box_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:text="@string/generatepassword_numbers"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="44dp"
        android:layout_marginTop="199dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/generatepassword_generated_password"
        android:layout_width="163dp"
        android:layout_height="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/generatedpassword_generated_password"
        app:layout_constraintLeft_toLeftOf="@+id/generate_password_check_box_lower_case"
        app:layout_constraintTop_toBottomOf="@+id/generate_password_check_box_lower_case"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/generatepassword_length"
        app:layout_constraintLeft_toLeftOf="@+id/generate_password_length"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/generate_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generatepassword_use"
        android:background="@null"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/generatepassword_generated_password"
        app:layout_constraintRight_toRightOf="@+id/generate_password_check_box_numbers"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/generatepassword_generated_password"
        app:layout_constraintHorizontal_bias="0.0" />

    <SeekBar
        android:id="@+id/generate_password_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:max="8"
        app:layout_constraintBottom_toTopOf="@+id/generate_password_check_box_numbers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="291dp"
        android:layout_height="52dp"
        android:text="@string/generatepassword_generate_dialog_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="44dp" />
</android.support.constraint.ConstraintLayout>
