<resources>
    <string name="app_name">AndroKeePass</string>

    <!-- LoadFileActivity Strings -->
    <string name="loadfile_loading_title">Carregant</string>
    <string name="loadfile_select_recent_file">Obre una base de dades recent</string>
    <string name="loadfile_create_file">Crear una base de dades</string>
    <string name="loadfile_error_creating_database">No s\'ha pogut crear la base de dades</string>
    <string name="loadfile_error_loading_recent_databases">No s\'ha pogut carregar la llista de bases de dades recents</string>
    <string name="loadfile_cretate_database_dialog_title">Crea una base de dades</string>
    <string name="loadfile_cretate_database_dialog_message">Introdueix en nom de la base de dades i la contrasenya</string>
    <string name="loadfile_cretate_database_dialog_database">Base de dades</string>
    <string name="loadfile_open_database_dialog_title">Obrir base de dades</string>
    <string name="loadfile_open_database_dialog_database">Introdueix la contrasenya</string>
    <string name="loadfile_delete_database_dialog_title">Esborrar base de dades</string>
    <string name="loadfile_delete_database_dialog_database">Segur que vols esborrar la base de dades %1$s?</string>
    <string name="loadfile_delete_database_toast_message">S\'ha esborrat la base de dades %1$s</string>
    <string name="loadfile_create_database_toast_message">S\'ha creat la base de dades %1$s</string>
    <string name="loadfile_error_deleting_databases">No s\'ha pogut esborrar la base de dades</string>
    <string name="loadfile_cretate_database_password_error">Les contrasenyes no són iguals on son massa curtes</string>
    <string name="loadfile_cretate_database_database_name_error">El nom de la base de dades es massa curt</string>

    <!-- Common Strings -->
    <string name="password">Contrasenya</string>
    <string name="repeat_password">Repeteix la contrasenya</string>
    <string name="ok">D\'acord</string>
    <string name="cancel">Canceŀlar</string>
    <string name="search_icon_title">Cerca</string>
    <string name="action_settings">Opcions</string>
    <string name="preferences_header_security">Seguretat</string>
    <string name="loadfile_create_database_button">Crear base de dades</string>

    <!-- Permission Strings -->
    <string name="permission_denied">Sense el permís per guardar a disc, no es poden crear ni obrir bases de dades</string>

    <!-- Strings for customizing the Passcode Lock interface -->
    <string name="cd_passcodelock_logo">PasscodeLock Logo</string>
    <string name="passcode_fingerprint_supported">Fingerprint Supported</string>
    <string name="passcode_change_passcode">Change passcode</string>
    <string name="passcode_enter_old_passcode">Enter old passcode</string>
    <string name="passcode_re_enter_passcode">Enter passcode again</string>
    <string name="passcode_turn_off">Disable lock</string>
    <string name="passcode_turn_on">Enable lock</string>
    <string name="passcode_wrong_passcode">Wrong passcode.</string>
    <string name="passcodelock_prompt_message">Enter passcode</string>

    <!-- Generate Password Strings -->
    <string name="generatepassword_title">Crear contrasenya</string>
    <string name="generatepassword_length">Longitud de la contrasenya</string>
    <string name="generatepassword_punctuation">Caracters especials</string>
    <string name="generatepassword_upper">Majuscules</string>
    <string name="generatepassword_lower">Minúscules</string>
    <string name="generatepassword_numbers">Números</string>
    <string name="generatedpassword_generated_password">Contrasenya</string>
    <string name="generatepassword_use">Utilitza la contrasenya</string>
    <string name="generatepassword_generate_dialog_message">Utilitza les opcions per a generar una contrasenya aleatoria</string>
    <string name="generatepassword_generate">Generar contrasenya</string>
</resources>
