<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/include" />

    <Button
        android:id="@+id/create_database_generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/generatepassword_generate"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/etPasswordLayoutRepeat"
        android:layout_alignStart="@+id/create_database_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/loadfile_cretate_database_dialog_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="18dp"
        android:text="@string/loadfile_cretate_database_dialog_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="18sp"
        tools:text="@string/loadfile_cretate_database_dialog_title"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:id="@+id/create_database_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/loadfile_create_database_button"
        android:layout_alignTop="@+id/create_database_generate_button"
        android:layout_alignStart="@+id/etPasswordLayoutRepeat"
        android:layout_marginTop="51dp" />

    <EditText
        android:id="@+id/create_database_txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/loadfile_cretate_database_dialog_database"
        android:inputType="textPersonName" />



    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayoutRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/create_database_txt_name"
        android:layout_below="@+id/etPasswordLayout"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true"
        android:layout_alignEnd="@+id/etPasswordLayout">

        <EditText
            android:id="@+id/create_database_txt_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:layout_alignEnd="@+id/create_database_txt_password" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_database_txt_name"
        android:layout_alignStart="@+id/create_database_txt_name"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true"
        android:layout_alignEnd="@+id/create_database_txt_name">

        <EditText
            android:id="@+id/create_database_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_alignEnd="@+id/create_database_txt_name" />
    </android.support.design.widget.TextInputLayout>




</RelativeLayout>