...
    <include layout="@layout/toolbar"
        android:id="@+id/include" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/loadfile_button_create_file"
        android:orientation="vertical"
        android:layout_above="@+id/loadfile_button_create_file"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/include">

        <android.support.v7.widget.CardView
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/loadfile_recycler_view_recents_databases"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.91">

                    </android.support.v7.widget.RecyclerView>

...
